# the-loop

./: .gitignore  README.md  calculations.py  calculations_data.json  flight.py  flight_data.json  flight_loop_data.json  graphics.py  pyproject.toml  start_data.json
code/: calculations.py  flight.py  graphics.py
osprey/: osprey.craft  osprey.loadmeta
plane/: plane.craft  plane.loadmeta
